--- a/ShinobiChartsWithAndroidStudio/ShinobiChartsWithAndroidStudio/src/main/AndroidManifest.xml
+++ b/ShinobiChartsWithAndroidStudio/ShinobiChartsWithAndroidStudio/src/main/AndroidManifest.xml
@@ -8,11 +8,14 @@
         android:minSdkVersion="12"
         android:targetSdkVersion="19" />
 
+    <uses-feature android:glEsVersion="0x00020000" android:required="true"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:hardwareAccelerated="true" >
         <activity
             android:name="com.shinobi.shinobichartswithandroidstudio.MainActivity"
             android:label="@string/app_name" >
